--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -34,7 +34,15 @@
         android:id="@+id/actorskFragment"
         android:name="edu.itesm.stanley.ActorskFragment"
         android:label="fragment_actorsk"
-        tools:layout="@layout/fragment_actorsk" />
+        tools:layout="@layout/fragment_actorsk" >
+        <action
+            android:id="@+id/action_actorskFragment_to_actorFragment2"
+            app:destination="@id/actorFragment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
+    </fragment>
     <fragment
         android:id="@+id/movieFragment"
         android:name="edu.itesm.stanley.MovieFragment"
@@ -43,5 +51,14 @@
         <argument
             android:name="movie"
             app:argType="edu.itesm.stanley.Movie" />
+    </fragment>
+    <fragment
+        android:id="@+id/actorFragment"
+        android:name="edu.itesm.stanley.ActorFragment"
+        android:label="fragment_actor"
+        tools:layout="@layout/fragment_actor" >
+        <argument
+            android:name="actor"
+            app:argType="edu.itesm.stanley.Actor" />
     </fragment>
 </navigation>
