--- a/app/src/main/res/layout/fragment_actor.xml
+++ b/app/src/main/res/layout/fragment_actor.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieFragment">
+    tools:context=".ActorFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="titulo"
+                android:text="name"
                 android:textColor="@color/purple_500"
                 android:textStyle="bold" />
 
@@ -40,7 +40,7 @@
                 android:id="@+id/movie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="anio"
+                android:text="movie"
                 android:textColor="@color/black"
                 android:textStyle="italic" />
 
@@ -48,7 +48,7 @@
                 android:id="@+id/info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="plot" />
+                android:text="info" />
 
         </LinearLayout>
     </LinearLayout>
