--- a/app/src/main/res/layout/movies_renglon.xml
+++ b/app/src/main/res/layout/movies_renglon.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/foto"
+                android:id="@+id/photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 card_view:srcCompat="@mipmap/movies_round" />
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/titulo"
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
@@ -38,14 +38,14 @@
                     android:text="titulo" />
 
                 <TextView
-                    android:id="@+id/anio"
+                    android:id="@+id/movie"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="italic"
                     android:textColor="@color/black"
                     android:text="anio" />
                 <TextView
-                    android:id="@+id/plot"
+                    android:id="@+id/info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="plot" />
