--- a/app/src/main/res/layout/fragment_actor.xml
+++ b/app/src/main/res/layout/fragment_actor.xml
@@ -13,20 +13,23 @@
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:srcCompat="@mipmap/movies_round" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingLeft="10dp">
+
+            <ImageView
+                android:id="@+id/photo"
+                android:layout_width="365dp"
+                android:layout_height="361dp"
+                android:layout_marginLeft="5dp"
+                tools:srcCompat="@mipmap/movies_round" />
 
             <TextView
                 android:id="@+id/name"
