--- a/app/src/main/res/layout/fragment_actorsk.xml
+++ b/app/src/main/res/layout/fragment_actorsk.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MoviesFragment">
+    tools:context=".ActorskFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/actors_recycler"
@@ -12,8 +12,10 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/actors_renglon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
