--- a/app/src/main/res/layout/actors_renglon.xml
+++ b/app/src/main/res/layout/actors_renglon.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_pertanyaan"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/card_pertanyaan"
+    android:clickable="true"
+    android:foreground="?selectableItemBackground"
     card_view:cardBackgroundColor="#FFFF"
     card_view:cardCornerRadius="8dp"
-    card_view:contentPadding="10dp"
-    android:foreground="?selectableItemBackground"
-    android:clickable="true">
+    card_view:contentPadding="10dp">
+
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="675dp"
+        android:layout_height="wrap_content"
+        android:paddingLeft="0dp"
+        card_view:srcCompat="@mipmap/movies_round" />
 
     <LinearLayout
         android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="10dp">
-
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="150dp"
-            card_view:srcCompat="@mipmap/movies_round" />
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="268dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/info"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="info" />
+                android:text="name"
+                android:textColor="@color/purple_500"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/movie"
@@ -45,12 +44,12 @@
                 android:textStyle="italic" />
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="name"
-                android:textColor="@color/purple_500"
-                android:textStyle="bold" />
+                android:text="info"
+                android:textColor="@color/black" />
+
         </LinearLayout>
 
     </LinearLayout>
